libx11 (2:1.1.4-2) UNRELEASED; urgency=low

  * Drop Pre-Depends on x11-common from libx11-6, libx11-data and libx11-xcb1.
  * Pull from upstream libX11-1.1-branch
    + fixes Compose sequences for finnish keyboards (closes: #467142)
    + interrobang has been added to the en_US.UTF-8 Compose file
      (closes: #300160)

 -- Julien Cristau <jcristau@debian.org>  Mon, 17 Mar 2008 17:58:33 +0100

libx11 (2:1.1.4-1) experimental; urgency=low

  [ Timo Aaltonen ]
  * control: libx11-data Replaces old versions of libx11-6 to enable
    upgrades from Ubuntu 6.06.

  [ Julien Cristau ]
  * New upstream release
    + fixes XIM hang when switching input contexts (closes: #437437)
  * Update patch stack:
    + 003_recognize_glibc_2.3.2_locale_names.diff: fixup; drop the hunk
      under #ifdef WIN32, as I don't care enough to fix it
    + 004_en_US.UTF-8_Compose_fix_Unicode_plane_1.diff: remove, applied
      upstream
    + 005_Compose_fix_latin1_UTF8.diff: remove, applied upstream
    + 006_tailor_pt_BR.UTF-8_Compose.diff: fixup
    + 007_iso8859-15_Compose_fix.diff: refresh
    + 008_remove_ko_Compose.diff: refresh
    + 009_iso8859-15_Compose_Eurosign.diff: remove, applied upstream
    + 012_ru_RU_UTF-8_XLC_LOCALE.diff: refresh
    + 014_add_Khmer_digraphs.diff: fixup
    + 015_russian_locale_alias.diff: refresh
  * Bump Standards-Version to 3.7.3 (no changes).
  * Drop XS- prefix from Vcs-* control fields.
  * Fix malformed trailer line in libx11-6.NEWS (thanks, lintian).

 -- Julien Cristau <jcristau@debian.org>  Sat, 08 Mar 2008 03:13:07 +0100

libx11 (2:1.1.3-1) experimental; urgency=low

  [ Julien Cristau ]
  * New upstream release.
    + Fix locking in _XimGetWindowEventmask (closes: #427296).
    + fix XGetMotionEvents arguments order (closes: #431421).
    + XGetCommand(3) clarified (closes: #133348).
    + XrmCombineDatabase(3) fixed (closes: #393434).
  * Install the upstream NEWS file in libx11-6 in addition to the git
    changelog.