@@ -522,7 +522,7 @@ but any bit would help.  --Nathanael
  pt_BR.utf8:					pt_BR.UTF-8
  pt_PT:						pt_PT.ISO8859-1
  pt_PT.88591:					pt_PT.ISO8859-1
-@@ -948,12 +958,12 @@
+@@ -949,12 +959,12 @@
  XCOMM YU was the old ISO code for Yugoslavia (now CS for Serbia&Montenegro).
  XCOMM These lines should be deleted in the future.
  sh:						sr_CS.ISO8859-2
@@ -536,7 +536,7 @@ but any bit would help.  --Nathanael
  sk:						sk_SK.ISO8859-2
  sk_SK:						sk_SK.ISO8859-2
  sk_SK.iso88592:					sk_SK.ISO8859-2
-@@ -1175,7 +1185,7 @@
+@@ -1176,7 +1186,7 @@
  american.iso88591:				en_US.ISO8859-1
  arabic.iso88596:				ar_AA.ISO8859-6
  bokmal:						nb_NO.ISO8859-1
@@ -545,7 +545,7 @@ but any bit would help.  --Nathanael
  bulgarian:					bg_BG.CP1251
  c-french.iso88591:				fr_CA.ISO8859-1
  catalan:					ca_ES.ISO8859-1
-@@ -1190,11 +1200,11 @@
+@@ -1191,11 +1201,11 @@
  dutch:						nl_NL.ISO8859-1
  dutch.iso88591:					nl_BE.ISO8859-1
  eesti:						et_EE.ISO8859-1
@@ -559,7 +559,7 @@ but any bit would help.  --Nathanael
  french:						fr_FR.ISO8859-1
  french.iso88591:				fr_CH.ISO8859-1
  galego:						gl_ES.ISO8859-1
-@@ -1203,8 +1213,8 @@
+@@ -1204,8 +1214,8 @@
  german.iso88591:				de_CH.ISO8859-1
  greek:						el_GR.ISO8859-7
  greek.iso88597:					el_GR.ISO8859-7
