@@ -1,6 +1,6 @@
 --- libx11.orig/nls/en_US.UTF-8/Compose.pre
 +++ libx11/nls/en_US.UTF-8/Compose.pre
-@@ -6176,3 +6176,13 @@
+@@ -6228,3 +6228,13 @@
  ##<Multi_key> <U1D1B9> <U1D165> <U1D16F> 	: "𝆹𝅥𝅯"   U1D1BF # MUSICAL SYMBOL FUSA WHITE
  <Multi_key> <U1D1BC> <U1D16F> 	: "𝆺𝅥𝅯"   U1D1C0 # MUSICAL SYMBOL FUSA BLACK
  ##<Multi_key> <U1D1BA> <U1D165> <U1D16F> 	: "𝆺𝅥𝅯"   U1D1C0 # MUSICAL SYMBOL FUSA BLACK
