@@ -12,7 +12,7 @@ This will make it easier for russians to fit in with the rest of the world.
 
 --- libx11.orig/nls/locale.alias.pre
 +++ libx11/nls/locale.alias.pre
-@@ -1234,7 +1234,7 @@
+@@ -1235,7 +1235,7 @@
  portuguese.iso88591:				pt_PT.ISO8859-1
  romanian:					ro_RO.ISO8859-2
  rumanian:					ro_RO.ISO8859-2
