@@ -5,6 +5,7 @@ libx11 (2:1.1.4-2) UNRELEASED; urgency=low
     + fixes Compose sequences for finnish keyboards (closes: #467142)
     + interrobang has been added to the en_US.UTF-8 Compose file
       (closes: #300160)
+  * Update patch 006_tailor_pt_BR.UTF-8_Compose.diff, refresh others.
 
  -- Julien Cristau <jcristau@debian.org>  Mon, 17 Mar 2008 17:58:33 +0100
 
